[project]
name = "tei-make-corpus"
version = "0.0.3"
authors = [
  {name="Luise Köhler", email="luise.koehler@bbaw.de"},
]
description = "Create a teiCorpus-file from a collection of TEI documents "
readme = "README.md"
requires-python = ">=3.8"
keywords  = ["TEI", "teiCorpus"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
]
dependencies=["lxml>=4.0, <5.0",
              "tomli>=2.0, <3.0;python_version<'3.11'",
              ]


[project.urls]
"Homepage" = "https://github.com/knit-bee/tei-make-corpus"
"Bug Tracker" = "https://github.com/knit-bee/tei-make-corpus/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[project.scripts]
tei-make-corpus = "tei_make_corpus.__main__:main"

# testing and dev tools
[project.optional-dependencies]
check = ["black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.7",
    "coverage>=6.0"]
test = ["pytest>=7.0"]

[tool.flake8]
exclude = "site-packages"
filename = "*.py"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = ["class .*\\bProtocol\\):", "@abc.abstract"]
