[metadata]
name = tei-make-corpus
author = luise.koehler@bbaw.de
version = 0.0.1

[options]
install_requires =
  lxml >= 4.0, <= 5

packages = find:

[options.packages.find]
exclude =
  tests

[options.entry_points]
console_scripts=
  tei-make-corpus = tei_make_corpus.__main__:main

# testing and dev tools
[flake8]
exclude =
  site-packages
filename =
  *.py

[mypy]
ignore_missing_imports=True

[isort]
profile=black

[coverage:report]
exclude_lines =
  class .*\bProtocol\):
